# ss-final-project

./: .envrc  Cargo.toml  README.md  shell.nix
.devcontainer/: devcontainer.json
node/: Cargo.toml
pallets/members/: Cargo.toml
pallets/template/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
src/: main.rs
